--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = {version = "0.4.33", features = ["serde"]}
 crossterm = { version = "0.27.0", features = ["serde"]}
+home = "0.5.9"
 rand = "0.8.5"
 ratatui = "0.26.0"
 serde = {version = "1.0.196", features = ["derive"]}
